fix: sidebar sometimes overlaps the content, again

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,8 +30,8 @@
     mat-sidenav-container {
         height: calc(100% - 64px);
         .mat-sidenav {
-            width: 20%;
-            min-width: 200px;
+            width: 10%;
+            min-width: 250px;
             max-width: 350px;
             display: flex;
             flex-direction: column;
